codex-rs/tui/src/external_agent_config_migration/snapshots/codex_tui__external_agent_config_migration__tests__external_agent_config_migration_customize_action.snap
---
source: tui/src/external_agent_config_migration/mod.rs
expression: rendered
---

  > Choose what to import
  Choose items to import.
  Elpis may add files to your current project folder.
  Your existing setup will not be changed.
  Home
    [x] Settings
        Import /Users/alex/.claude/settings.json into /Users/alex/.codex/conf…
    [x] Recent chat sessions
        Import recent Claude Code sessions
        1 chat session: Investigate migration UX

  Current project: /workspace/project
    [x] Plugins
        Import enabled plugins from .claude/settings.json (4 marketplaces, 6 …
        • acme-tools: deployer, formatter, +1 more
        • team-marketplace: asana
        • debug: sample
        • +1 more marketplaces
    [x] Instructions
        Import CLAUDE.md to AGENTS.md

  Selected 4 of 4 items.
  › 1. Review selection
  Press enter to continue, ↑/↓ to move, b to go back
